added pages for experiment

--- a/main/ReportingStage.html
+++ b/main/ReportingStage.html
@@ -1,9 +1,10 @@
 {{ block title }}
-    Page title
+    Reporting Stage
 {{ endblock }}
+
 {{ block content }}
 
-    {{ formfields }}
     {{ next_button }}
-
 {{ endblock }}
+
+
