--- a/main/WorkingStage.html
+++ b/main/WorkingStage.html
@@ -1,10 +1,9 @@
 {{ block title }}
-    Page title
+    Working Stage
 {{ endblock }}
-
 {{ block content }}
 
+    {{ formfields }}
     {{ next_button }}
+
 {{ endblock }}
-
-
