tested code. stealer is selected if there are multiple. reporting front end template added and

--- a/main/ReportingStage.html
+++ b/main/ReportingStage.html
@@ -4,6 +4,10 @@
 
 {{ block content }}
 
+    <p>You were stolen from by {{stealing_player}}</p>
+
+    {{formfields}}
+
     {{ next_button }}
 {{ endblock }}
 
